test/types/range/hilde/byTypeError1.chpl
var u10 = 10:uint; writeln((1:int(8).. by u10).type:string);

writeln((1:int(16).. by u10).type:string);

writeln((1:int(32).. by u10).type:string);

writeln((1:uint(8).. by u10).type:string);

writeln((1:uint(16).. by u10).type:string);

writeln((1:uint(32).. by u10).type:string);

